syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Address {
  option (gorm.opts) = {ormable: true};

  string address = 1 [(gorm.field).tag = {primary_key: true}];
  string current_balance = 2;
}
